--- a/Resources/Views/SlideView.xib
+++ b/Resources/Views/SlideView.xib
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="SlideView" id="iN0-l3-epB" customClass="SlideView" customModule="bio_bfa_ios_framework" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="SlideView" id="iN0-l3-epB" customClass="SlideView" customModule="BioBFA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIK-To-DyP" customClass="View" customModule="bio_bfa_ios_framework" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIK-To-DyP" customClass="View" customModule="BioBFA" customModuleProvider="target">
                     <rect key="frame" x="87.5" y="150" width="200" height="200"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tFV-VQ-r20">
@@ -42,13 +42,12 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="oIK-To-DyP" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="CYw-Bf-K9W"/>
+                <constraint firstItem="oIK-To-DyP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="CYw-Bf-K9W"/>
                 <constraint firstItem="QQJ-FS-jEb" firstAttribute="top" secondItem="oIK-To-DyP" secondAttribute="bottom" constant="50" id="NSH-cw-eim"/>
-                <constraint firstItem="oIK-To-DyP" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="150" id="Stl-iD-Nu9"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="QQJ-FS-jEb" secondAttribute="trailing" constant="60" id="WRe-rt-RvP"/>
-                <constraint firstItem="QQJ-FS-jEb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="60" id="XKk-tO-aHS"/>
+                <constraint firstItem="oIK-To-DyP" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="150" id="Stl-iD-Nu9"/>
+                <constraint firstAttribute="trailing" secondItem="QQJ-FS-jEb" secondAttribute="trailing" constant="60" id="WRe-rt-RvP"/>
+                <constraint firstItem="QQJ-FS-jEb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="60" id="XKk-tO-aHS"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="imageView" destination="tFV-VQ-r20" id="Z7m-y4-qZk"/>
                 <outlet property="title" destination="QQJ-FS-jEb" id="K0R-LL-pxq"/>
